# 86Box4crt

./: README.md
unix/: kms.sh
unix/cmake/: flags-gcc.cmake
unix/src/: CMakeLists.txt  config.c
unix/src/include/86box/: config.h  switchres_wrapper.h  unix_opengl.h  unix_opengl_glslp.h  unix_sdl.h  video.h
unix/src/unix/: CMakeLists.txt  unix.c  unix_opengl.c  unix_opengl_glslp.c  unix_sdl.c  unix_sdl2_joystick.c
unix/src/video/: vid_svga.c
win/: build.sh  switchres.ini
win/src/: CMakeLists.txt
win/src/cmake/: flags-gcc.cmake
win/src/include/86box/: resource.h  win.h  win_sdl_sr.h
win/src/video/: video.c
win/src/win/: CMakeLists.txt  win.c  win_sdl_sr.c  win_ui.c
win/src/win/languages/: cs-CZ.rc  de-DE.rc  en-GB.rc  en-US.rc  es-ES.rc  fi-FI.rc  fr-FR.rc  hr-HR.rc  hu-HU.rc  it-IT.rc  ja-JP.rc  ko-KR.rc  pl-PL.rc  pt-BR.rc  pt-PT.rc  ru-RU.rc  sl-SI.rc  tr-TR.rc  uk-UA.rc  zh-CN.rc  zh-TW.rc
winsr/: build.sh
winsr/src/: 86box.c  CMakeLists.txt
winsr/src/include/86box/: 86box.h  switchres_wrapper.h  switchres_wrapper2.h  winsr_opengl.h  winsr_opengl_glslp.h  winsr_sdl.h
winsr/src/video/: vid_svga.c  video.c
winsr/src/winsr/: CMakeLists.txt  cmake_install.cmake  winsr.c  winsr_opengl.c  winsr_opengl_glslp.c  winsr_sdl.c  winsr_sdl2_joystick.c
